--- a/Documentation/Entwurf/entwurf.tex
+++ b/Documentation/Entwurf/entwurf.tex
@@ -64,16 +64,16 @@ Interaktionen mit der Software durch die View"=Komponente werden über die Contr
 		\dirtree{%
 			.1 edu.kit.ipd.pp.viper.
 			.2 model.
-			.3 interpreter.
+			.3 ast.
 			.3 parser.
+			.3 interpreter.
 			.2 controller.
 			.2 view.
-			.3 visualization.
 		}
 	\end{minipage}
 \end{center}
 
-Das Model"=Paket kapselt die genannte Model"=Komponente. Innerhalb dieses Pakets existieren Unterpakete für die Implementierung des Prolog"=Parsers und des Prolog"=Interpreters. Analog existieren Pakete für die Implementierung der View- und Controller"=Komponente. Das Visualization"=Unterpaket dient spezifisch der Implementierung der Visualisierung.
+Das Model"=Paket kapselt die genannte Model"=Komponente. Innerhalb dieses Pakets existieren Unterpakete für die Implementierung des abstrakten Syntaxbaumes (AST), des Prolog"=Parsers und des Prolog"=Interpreters. Weiter existieren eigene Pakete für die Implementierung der View- und Controller"=Komponente.
 
 \section{Klassenbeschreibungen}
 
