design: Add back visualisation package

--- a/Documentation/Entwurf/entwurf.tex
+++ b/Documentation/Entwurf/entwurf.tex
@@ -69,11 +69,13 @@ Interaktionen mit der Software durch die View"=Komponente werden über die Contr
 			.3 interpreter.
 			.2 controller.
 			.2 view.
+			.3 visualisation.
 		}
 	\end{minipage}
 \end{center}
 
-Das Model"=Paket kapselt die genannte Model"=Komponente. Innerhalb dieses Pakets existieren Unterpakete für die Implementierung des abstrakten Syntaxbaumes (AST), des Prolog"=Parsers und des Prolog"=Interpreters. Weiter existieren eigene Pakete für die Implementierung der View- und Controller"=Komponente.
+Das Model"=Paket kapselt die genannte Model"=Komponente. Innerhalb dieses Pakets existieren Unterpakete für die Implementierung des abstrakten Syntaxbaumes (AST), des Prolog"=Parsers und des Prolog"=Interpreters. Weiter existieren eigene Pakete für die Implementierung der View- und Controller"=Komponente. Das Visualisation"=Unterpaket dient spezifisch der Implementierung der Visualisierung.
+
 
 \section{Klassenbeschreibungen}
 
